<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment android:label="@string/menu_home"
        android:name="com.APlus.Schodule.ui.home.HomeFragment"
        android:id="@+id/nav_home"/>
    <fragment
        android:label="@string/menu_gallery"
        android:name="com.APlus.Schodule.ui.tareas.GalleryFragment"
        android:id="@+id/nav_gallery"/>
    <fragment
        android:label="@string/menu_slideshow"
        android:name="com.APlus.Schodule.ui.eventos.SlideshowFragment"
        android:id="@+id/nav_slideshow"/>
    fragment
        android:label="@string/menu_tools"
        android:name="com.APlus.Schodule.ui.tools.ToolsFragment"
        android:id="@+id/nav_tools"/>
    fragment
        android:label="@string/menu_share"
        android:name="com.APlus.Schodule.share.ShareFragment"
        android:id="@+id/nav_share"/>
    <fragment
        android:label="@string/menu_send"
        android:name="com.APlus.Schodule.ui.apuntes.SendFragment"
        android:id="@+id/nav_send"/>
    <fragment
        android:label="Formularios"
        android:name="com.APlus.Schodule.ui.form.FormFragment"
        android:id="@+id/nav_form"/>
</navigation>